# XPe-Python-Bootcamp

./: .gitignore  .gitkeep  README.md
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/01 - Desenvolvimento WEB/04 - Introdução ao Django/Django-CRUD/: Makefile  leia-me.txt  pyproject.toml
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/02 - Trabalho Prático/Trabalho Prático/: Makefile  leia-me.txt  pyproject.toml
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/02 - Trabalho Prático/Trabalho Prático/project/application/: apps.py  urls.py  views.py
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/02 - Trabalho Prático/Trabalho Prático/project/django_project/: settings.py
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/03 - Desafio/Desafio/: leia-me.txt  pyproject.toml
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/03 - Desafio/Desafio/project/: app.py  config.py  forms.py
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/03 - Desafio/Desafio/project/controllers/: user.py
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/03 - Desafio/Desafio/project/models/: user.py
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/03 - Desafio/Desafio/project/routes/: user.py
XPe Bootcamp Desenvolvedor(a) Python/Módulo 03 - Python - Desenvolvimento WEB/03 - Desafio/Desafio/project/templates/: base.html  user_create.html  user_update.html  users_index.html
(+140 files in other folders)
