[tool.poetry]
name = "Django-CRUD"
version = "0.0.1"
description = "Introdução ao Django"
authors = ["Fabrício dos Santos Moreira"]
readme = ""


[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"
coverage = "7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
